--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -81,6 +81,8 @@
     <entry name="ChaosSpaceMarines/BlessedChampionFlavor" value="While many warbands of Heretic Astartes have grown to rival entire Chapters of loyalist Space Marines in size, most began as a core of ruthless followers led by their powerful champion. Such individuals draw more and more warriors to their service as their influence expands, their dread reputation for destruction becoming more storied as their warband grows in notoriety and power."/>
     <entry name="ChaosSpaceMarines/SmokeLauncher" value="Smoke Launcher"/>
     <entry name="ChaosSpaceMarines/SmokeLauncherDescription" value="Increases regeneration."/>
+    <entry name="ChaosSpaceMarines/Defiler" value="Defiler"/>
+    <entry name="ChaosSpaceMarines/DefilerDescription" value="Takes damage over time."/>
 
     <entry name="Eldar/Prosperity" value="Prosperity" />
     <entry name="Eldar/ProsperityDescription" value="Increases city growth" />
