Added Warpsmith aura, decreased forgefiend accuracy

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -69,6 +69,9 @@
     <entry name="ChaosSpaceMarines/IchorBloodDescription" value="Reduces melee attacks of adjacent enemies."/>
     <entry name="ChaosSpaceMarines/Defiler" value="Defiler"/>
     <entry name="ChaosSpaceMarines/DefilerDescription" value="Applies damage over time debuff to all units around Defiler."/>
+    <entry name="ChaosSpaceMarines/EnrageMachineSpirits" value="Enrage Machine Spirits"/>
+    <entry name="ChaosSpaceMarines/EnrageMachineSpiritsDescription" value="Increases the accuracy of adjacent allied Heldrakes, Forgefiends and Maulerfiends."/>
+    <entry name="ChaosSpaceMarines/EnrageMachineSpiritsFlavor" value="No armour is safe from the guns of the IV Legion, and once an enemy war engine is marked for destruction, its doomed is sealed."/>
 
     <entry name="Eldar/ActivateWebwayGateDescription" value="Activates and claims a neutral Webway Gate. Must be within 3 tiles of friendly Eldar unit." />
     <entry name="Eldar/DoomDescription" value="Increases the damage taken by target non-hero enemy unit." />
