--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -83,6 +83,9 @@
     <entry name="ChaosSpaceMarines/SmokeLauncherDescription" value="Increases regeneration."/>
     <entry name="ChaosSpaceMarines/Defiler" value="Defiler"/>
     <entry name="ChaosSpaceMarines/DefilerDescription" value="Takes damage over time."/>
+    <entry name="ChaosSpaceMarines/EnrageMachineSpirits" value="Enrage Machine Spirits"/>
+    <entry name="ChaosSpaceMarines/EnrageMachineSpiritsDescription" value="Increases the accuracy."/>
+    <entry name="ChaosSpaceMarines/EnrageMachineSpiritsFlavor" value="No armour is safe from the guns of the IV Legion, and once an enemy war engine is marked for destruction, its doomed is sealed."/>
 
     <entry name="Eldar/Prosperity" value="Prosperity" />
     <entry name="Eldar/ProsperityDescription" value="Increases city growth" />
