--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -180,6 +180,8 @@
     <entry name="Orks/BoltDamageDescription" value="Increases the armour penetration of bolt weapons." />
     <entry name="Orks/Prosperity" value="Prosperity" />
     <entry name="Orks/ProsperityDescription" value="Increases city growth" />
+    <entry name="Orks/CityFoodAndOre" value="Funga / Digga"/>
+    <entry name="Orks/CityFoodAndOreDescription" value="Increases the food and the ore output."/>
 
     <entry name="SistersOfBattle/Prosperity" value="Prosperity" />
     <entry name="SistersOfBattle/ProsperityDescription" value="Increases city growth" />
